--- a/views/track.hbs
+++ b/views/track.hbs
@@ -9,7 +9,7 @@
 <body>
     <div class="container mt-5">
         <h1 id="driverName"></h1>
-        <h1 id="locationDetail">{{number}}</h1>
+        <h1 id="locationDetail">this</h1>
     </div>
     <script>
       const resultFn = async () => {
